--- a/src/components/home/Home.css
+++ b/src/components/home/Home.css
@@ -29,11 +29,21 @@
 }
 
 @media (max-width: 576px) {
-  .home h2 {
-    font-size: 20px;
-    font-weight: 200;
-  }
   .home img {
     height: 150px;
+  }
+  .home h2 {
+    font-size: 30px;
+    font-weight: 300;
+    color: white;
+  }
+  .home p {
+    font-size: 15px;
+    color: white;
+  }
+  .home i {
+    font-size: 40px;
+    padding: 20px;
+    color: white;
   }
 }
