--- a/src/components/home/Home.css
+++ b/src/components/home/Home.css
@@ -8,6 +8,7 @@
   left: 0;
   width: 100%;
   height: 100%;
+  padding: 5rem;
 }
 
 .home img {
@@ -29,6 +30,9 @@
 }
 
 @media (max-width: 576px) {
+  .home {
+    padding: 2rem;
+  }
   .home img {
     height: 250px;
   }
